Added new icons for the cagov font library

--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -422,7 +422,204 @@ Based on Twitter Bootstrap
                     </div>
 
 
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-distance">
 
+                            </span>
+                            <span class="mls"> ca-gov-icon-distance</span>
+                        </div>
+                        <p class="icon-value">e995</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-coronavirus">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-coronavirus</span>
+                        </div>
+                        <p class="icon-value">e996</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-coughing">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-coughing</span>
+                        </div>
+                        <p class="icon-value">e997</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-cover">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-cover</span>
+                        </div>
+                        <p class="icon-value">e998</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-cubes">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-cubes</span>
+                        </div>
+                        <p class="icon-value">e999</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-hand-heart">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-hand-heart</span>
+                        </div>
+                        <p class="icon-value">e99a</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-hand-water">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-hand-water</span>
+                        </div>
+                        <p class="icon-value">e99b</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-lab-tests">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-lab-tests</span>
+                        </div>
+                        <p class="icon-value">e99c</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-mask">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-mask</span>
+                        </div>
+                        <p class="icon-value">e99d</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-no-coughing">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-no-coughing</span>
+                        </div>
+                        <p class="icon-value">e99e</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-no-handshake">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-no-handshake</span>
+                        </div>
+                        <p class="icon-value">e99f</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-no-virus">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-no-virus</span>
+                        </div>
+                        <p class="icon-value">e9a0</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-procurement">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-procurement</span>
+                        </div>
+                        <p class="icon-value">e9a1</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-project">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-project</span>
+                        </div>
+                        <p class="icon-value">e9a2</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-soap">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-soap</span>
+                        </div>
+                        <p class="icon-value">e9a3</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-stay-home">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-stay-home</span>
+                        </div>
+                        <p class="icon-value">e9a4</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-teleworking">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-teleworking</span>
+                        </div>
+                        <p class="icon-value">e9a5</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-testing">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-testing</span>
+                        </div>
+                        <p class="icon-value">e9a6</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-testing-alt">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-testing-alt</span>
+                        </div>
+                        <p class="icon-value">e9a7</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-virus">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-virus</span>
+                        </div>
+                        <p class="icon-value">e9a8</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-viruses">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-viruses</span>
+                        </div>
+                        <p class="icon-value">e9a9</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-wash">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-wash</span>
+                        </div>
+                        <p class="icon-value">e9aa</p>
+                    </div>
 
 
 
