Added 22 more new icons to the CaGov font library, updated search accessibility, added new css shortcuts classes and updated css shortcuts page

--- a/shortcuts.html
+++ b/shortcuts.html
@@ -119,13 +119,73 @@
                                     <td><code>.brd-solid-5</code></td>
                                     <td>solid border style with width of 5px</td>
                                 </tr>
+
+                                <tr>
+                                    <td><code>.brd-dotted-1</code></td>
+                                    <td>dotted border style with width of 1px</td>
+                                </tr>
+
+                                <tr>
+                                    <td><code>.brd-gray</code></td>
+                                    <td>grey border color (#555)</td>
+                                </tr>
                                 <tr>
                                     <td><code>.brd-gray-light</code></td>
                                     <td>light grey border color (#ddd)</td>
                                 </tr>
                                 <tr>
+                                    <td><code>.brd-gray-dark</code></td>
+                                    <td>dark grey border color (#222)</td>
+                                </tr>
+
+                                <tr>
                                     <td><code>.brd-primary-light</code></td>
                                     <td>theme's primary border color 60% tinted</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-white-before</code></td>
+                                    <td>adds white border to something before the content of each selected element(s).</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-white-after</code></td>
+                                    <td>adds white border to something after the content of each selected element(s).</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-gray-light-before</code></td>
+                                    <td>adds light grey to something before the content of each selected element(s).</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-gray-light-after</code></td>
+                                    <td>adds light grey border to something after the content of each selected element(s).</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-transparent-before</code></td>
+                                    <td>transparent border to something before the content of each selected element(s).</td>
+                                </tr>
+
+                                <tr>
+                                    <td><code>.brd-transparent-after</code></td>
+                                    <td>transparent border to something after the content of each selected element(s).</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-0</code></td>
+                                    <td>no borders</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-right</code></td>
+                                    <td>right side solid border style with width of 1px</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-left</code></td>
+                                    <td>left side solid border style with width of 1px</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-top</code></td>
+                                    <td>top side solid border style with width of 1px</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.brd-bottom</code></td>
+                                    <td>bottom side solid border style with width of 1px</td>
                                 </tr>
                                 <tr>
                                     <td><code>.rounded-50x</code></td>
@@ -532,6 +592,82 @@
                                 <tr>
                                     <td><code>.top-rel-40pct</code></td>
                                     <td>move relative positioned element 40% below its normal position</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-sm-rel-40pct</code></td>
+                                    <td>move relative positioned element 40% below its normal position in mobile</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-md-rel-40pct</code></td>
+                                    <td>move relative positioned element 40% below its normal position in medium sized devices</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-lg-rel-40pct</code></td>
+                                    <td>move relative positioned element 40% below its normal position in larger devices</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-rel-30pct</code></td>
+                                    <td>move relative positioned element 30% below its normal position</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-sm-rel-30pct</code></td>
+                                    <td>move relative positioned element 30% below its normal position in mobile</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-md-rel-30pct</code></td>
+                                    <td>move relative positioned element 30% below its normal position in medium sized devices</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-lg-rel-30pct</code></td>
+                                    <td>move relative positioned element 30% below its normal position in larger devices</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-rel-20pct</code></td>
+                                    <td>move relative positioned element 20% below its normal position</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-sm-rel-20pct</code></td>
+                                    <td>move relative positioned element 20% below its normal position in mobile</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-md-rel-20pct</code></td>
+                                    <td>move relative positioned element 20% below its normal position in medium sized devices</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-lg-rel-20pct</code></td>
+                                    <td>move relative positioned element 20% below its normal position in larger devices</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-rel-10pct</code></td>
+                                    <td>move relative positioned element 10% below its normal position</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-sm-rel-10pct</code></td>
+                                    <td>move relative positioned element 10% below its normal position in mobile</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-md-rel-10pct</code></td>
+                                    <td>move relative positioned element 10% below its normal position in medium sized devices</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-lg-rel-10pct</code></td>
+                                    <td>move relative positioned element 10% below its normal position in larger devices</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-rel-5pct</code></td>
+                                    <td>move relative positioned element 5% below its normal position</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-sm-rel-5pct</code></td>
+                                    <td>move relative positioned element 5% below its normal position in mobile</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-md-rel-5pct</code></td>
+                                    <td>move relative positioned element 5% below its normal position in medium sized devices</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.top-lg-rel-5pct</code></td>
+                                    <td>move relative positioned element 5% below its normal position in larger devices</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -1441,6 +1577,43 @@
                                     <td><code>.font-size-40</code></td>
                                     <td>font-size 2.85714rem (40px)</td>
                                 </tr>
+                                <tr>
+                                    <td><code>.line-height-0-8em</code></td>
+                                    <td>text line height is set to .8em</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.line-height-0-9em</code></td>
+                                    <td>text line height is set to .9em</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.line-height-1em</code></td>
+                                    <td>text line height is set to 1em</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.line-height-1-1em</code></td>
+                                    <td>text line height is set to 1.1em</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.line-height-1-2em</code></td>
+                                    <td>text line height is set to 1.2em</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.line-height-1-3em</code></td>
+                                    <td>text line height is set to 1.3em</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.line-height-1-4em</code></td>
+                                    <td>text line height is set to 1.4em</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.line-height-1-5em</code></td>
+                                    <td>text line height is set to 1.5em</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.line-height-1-6em</code></td>
+                                    <td>text line height is set to 1.6em</td>
+                                </tr>
+                                
 
                                 <tr>
                                     <td><code>.no-underline</code></td>
@@ -1453,6 +1626,10 @@
                                 <tr>
                                     <td><code>.underline-hover</code></td>
                                     <td>underline text decoration propery on hover and on focus</td>
+                                </tr>
+                                <tr>
+                                    <td><code>.underline-focus</code></td>
+                                    <td>underline text decoration propery on focus</td>
                                 </tr>
                                 <tr>
                                     <td><code>.underline-text-color</code></td>
