--- a/ssi/navigation.html
+++ b/ssi/navigation.html
@@ -153,7 +153,7 @@ Options are: megadropdown dropdown singlelevel
             <a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link"><span class="ca-gov-icon-download" aria-hidden="true"></span>Download</a>
         </li>
         <li class="nav-item" id='nav-item-search'>
-            <button class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</button>
+            <button class="first-level-link"><span class="search-btn"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</span></button>
         </li>
     </ul>
 </nav>
