added external and anchor link styles

--- a/sample/index.html
+++ b/sample/index.html
@@ -150,6 +150,7 @@
                 <li><a href="gradient-backgrounds.html">Gradient Backgrounds</a></li>
                 <li><a href="horizontal-rules.html">Horizontal Rules</a></li>
                 <li><a href="icon-fonts.html">Icon Font Library</a></li>
+                <li><a href="links.html">Links</a></li>
                 <li><a href="media-object.html">Media Object</a></li>
                 <li><a href="modal.html">Modal</a></li>
                 <li><a href="number-counter.html">Number Counter</a></li>
