added bold style and css shortcuts page

--- a/sample/links.html
+++ b/sample/links.html
@@ -73,13 +73,13 @@
 <h2 class="h3 m-b-sm">Regular link</h2>
             <p>This is a <a href="#">link example</a> inside of the main body paragraph text.</p>
 <h2 class="h3 m-b-sm">Anchor link</h2>
-            <p>An anchor hyperlink is a link bound to a portion of a document. To indicate <a href="#">anchor link<span class="ca-gov-icon-anchor link-icon" aria-hidden="true"></span></a> we add <code><span class="text-accent4">ca-gov-icon-anchor</span></code> icon to it like this: </p>
+            <p>An anchor hyperlink is a link bound to a portion of a document. To indicate <a href="#">anchor link<span class="ca-gov-icon-anchor link-icon" aria-hidden="true"></span></a> you can add <code><span class="text-accent4">ca-gov-icon-anchor</span></code> icon to it like this: </p>
                 <p>
                     <pre><span class="text-accent-p3">&lt;a href="#"&gt;anchor link</span> <span class="text-accent4">&lt;span class="ca-gov-icon-anchor link-icon" aria-hidden="true"&gt;&lt;/span&gt;</span><span class="text-accent-p3">&lt;/a&gt;</span></pre>
                 </p>
 
 <h2 class="h3 m-b-sm">External link</h2>
-            <p>External Links are hyperlinks that point outside of your domain. To indicate <a href="https://ca.gov">external link<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></span> <span class="sr-only">opens in new window</span></a> we add <code><span class="text-accent4">ca-gov-icon-external-link</span></code> icon to it with disclaimer for the screen reader users that this hyperlink will open in the new window like this: </p>
+            <p>External Links are hyperlinks that point outside of your domain. To indicate <a href="https://ca.gov">external link<span class="ca-gov-icon-external-link link-icon" aria-hidden="true"></span><span class="sr-only">opens in new window</span></a> you can add <code><span class="text-accent4">ca-gov-icon-external-link</span></code> icon to it with disclaimer for the screen reader users that this hyperlink will open in the new window like this: </p>
                 <p>
                     <pre><span class="text-accent-p3">&lt;a href="https://ca.gov"&gt;anchor link</span> <span class="text-accent4">&lt;span class="ca-gov-icon-external-link link-icon" aria-hidden="true"&gt;&lt;/span&gt;&lt;span class="sr-only"&gt;opens in new window&lt;/span&gt;</span><span class="text-accent-p3">&lt;/a&gt;</span></pre>
                 </p>
