--- a/sample/index.html
+++ b/sample/index.html
@@ -170,6 +170,12 @@
                 <li><a href="toggle.html">Toggle</a></li>
                 <li><a href="typography.html">Typography</a></li>
             </ul>
+            <h2>CSS Shortcuts</h2>
+            <ul class="list-primary">
+                <li><a href="/shortcuts.html">CSS classes list and description </a></li>
+            </ul>
+
+
             <h2>Dreamweaver Templates</h2>
             <ul class="list-primary">
                 <li><a href="dreamweaver-templates.html">Using Dreamweaver Templates</a></li>
