added sharable image, updated branding

--- a/ssi/branding-full-width.html
+++ b/ssi/branding-full-width.html
@@ -2,7 +2,17 @@
 <div class="branding">
     <div class="row">
         <div class="col-md-6">
-            <div class="header-organization-banner"><a href="/"><img src="/images/template-logo.png" alt="Organization Title" /></a></div>
+            <div class="header-organization-banner">
+                <a href="/">
+                    <div class="logo-assets">
+                        <img src="/images/template-logo-white.png" class="logo-img" alt="State Template Logo" />
+                        <div class="logo-text">
+                            <span class="logo-state text-white">State of California</span>
+                            <span class="logo-dept text-white">Web Template</span>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
         <div class="col-md-6">
             <div class="float-right font-size-12 p-r">
