--- a/ssi/branding.html
+++ b/ssi/branding.html
@@ -1,4 +1,14 @@
 <!-- header branding -->
 <div class="branding">
-<div class="header-organization-banner"><a href="/"><img src="/images/template-logo.png" alt="State of California Website Template logo" /></a></div>
+<div class="header-organization-banner">
+    <a href="/">
+        <div class="logo-assets">
+            <img src="/images/template-logo.png" class="logo-img" alt="State Template Logo" />
+            <div class="logo-text">
+                <span class="logo-state">State of California</span>
+                <span class="logo-dept">Web Template</span>
+            </div>
+        </div>
+    </a>
+</div>
 </div>
