--- a/ssi/head-css-js.html
+++ b/ssi/head-css-js.html
@@ -6,6 +6,12 @@
 <meta name="HandheldFriendly" content="True">
 <!-- for Blackberry, AvantGo -->
 <meta name="MobileOptimized" content="320">
+
+<meta property="og:image" content="http://https://template.webstandards.ca.gov/template.jpg">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1024">
+<meta property="og:image:height" content="1024">
+
 <!-- for Windows mobile -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
