fixed typo in  color schemes files

--- a/sample/colorscheme-mono.html
+++ b/sample/colorscheme-mono.html
@@ -208,7 +208,7 @@
 
                             <p>
                                 There are two ways to customize theme main colors. One way is to change primary and secondary theme color variables
-                                in the colorscheme-[yourcolorshceme].less file. This method will require you to re-compile the state template, you
+                                in the colorscheme-[yourcolorshceme].scss file. This method will require you to re-compile the state template, you
                                 can find instructions in the readme file.  After the compilation you will have updated colorscheme-[yourcolorshceme].css file.
                             </p>
 
