fixed sticky footer when used with two-column layout. issue #122

--- a/sample/sticky-footer.html
+++ b/sample/sticky-footer.html
@@ -26,7 +26,7 @@
     </script>
 </head>
 
-<body class="sticky-footer">
+<body class="sticky-footer two-column">
 
     <header role="banner" id="header" class="global-header">
         <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
@@ -54,7 +54,7 @@
         <div class="header-decoration"></div>
     </header>
 
-    <div id="main-content">
+    <div id="main-content" class="main-content">
         <div class="container p-b-lg">
             <main class="main-primary">
                 <ol class="breadcrumb">
@@ -67,6 +67,13 @@
 
                 <div class="content"></div>
             </main>
+
+
+<!--Secondary -->
+    <div class="main-secondary m-t-lg" role="complementary">
+         <!--#include virtual="/sample/modules/profile-banners.html" -->
+    </div>
+
         </div>
     </div>
 
