added gulp instruction page links

--- a/Getting-started.html
+++ b/Getting-started.html
@@ -203,6 +203,10 @@
 </pre>
 <p><span class="label label-info">Note:</span> The web server that hosts the State Template should be configured to process SSI's with the .html extension.</p>
 
+
+<h2>Source files</h2>
+<p>Inside of the <code>/source/</code> folder you will find source files, which are template's css, JavaScript building blocks. You can customize those scss (SASS) and js files and then use Gulp to compile then into the core css and js files.</p>
+<p><a href="/gulp.html">Learn more about using Gulp with State Template</a></p>
                 </div>
 
 
