--- a/ssi/navigation.html
+++ b/ssi/navigation.html
@@ -123,18 +123,19 @@ Options are: megadropdown dropdown singlelevel
 
                 </div>
                 <div class="second-level-nav flex">
-                    <a href="/about.html" class="second-level-link">
-                        <span class="ca-gov-icon-info-bubble font-size-40" aria-hidden="true"></span>
-                        <p class="h3 sub-nav-link">About</p>
-                        <p class="link-description">California State Template overview</p>
-                    </a>
-
                     <a href="https://github.com/Office-of-Digital-Innovation/California-State-Template-v5" class="second-level-link" target="_blank">
                         <span class="ca-gov-icon-cloud-download font-size-40" aria-hidden="true"></span>
                         <p class="h3 sub-nav-link">Download</p>
                         <p class="link-description">Download or clone State Template on GitHub</p>
                     </a>
 
+                    <a href="/gulp.html" class="second-level-link">
+                        <span class="ca-gov-icon-cubes font-size-40" aria-hidden="true"></span>
+                        <p class="h3 sub-nav-link">Using Gulp</p>
+                        <p class="link-description">How to use Gulp with State Template</p>
+                    </a>
+
+                    
                     <a href="/cdn.html" class="second-level-link">
                         <span class="ca-gov-icon-globe font-size-40" aria-hidden="true"></span>
                         <p class="h3 sub-nav-link">CDN</p>
